navbars and logo fixed

--- a/about.html
+++ b/about.html
@@ -39,11 +39,9 @@ Author URL: http://w3layouts.com
 <section class="w3l-bootstrap-header">
   <nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><span class="fa fa-pencil-square-o "></span> Mastery</a>
-      <!-- if logo is image enable this   
-    <a class="navbar-brand" href="#index.html">
-        <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-    </a> -->
+      <a class="navbar-brand" href="#index.html">
+        <img src="restem.png" alt="reSTEM" title="reSTEM" style="height:35px;" />
+    </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon fa fa-bars"></span>
@@ -58,12 +56,19 @@ Author URL: http://w3layouts.com
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="join.html">Join</a>
           </li>
-        
+          <li>
+            <a class="nav-link" href="activities.html">Activities</a>
+          </li>
+          <li>
+            <a class="nav-link" href="collaboration.html">Collaboration</a>
+          </li>
+          <li> <a class = "nav-link" href="resources.html">Resources</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+            </li>
         </ul>
         <form action="search-results.html" class="form-inline position-relative my-2 my-lg-0">
           <input class="form-control search" type="search" placeholder="Search here..." aria-label="Search" required="">
