--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Mastery a Education Category Bootstrap Responsive Website Template | About :: W3layouts</title>
+    <title>Project reSTEM : reimagining STEM</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <!-- //web fonts -->
@@ -26,10 +26,10 @@ Author URL: http://w3layouts.com
 	<header class="row top-menu-top">
 		<div class="accounts col-md-9 col-6">
 				<li class="top_li"><span class="fa fa-phone"></span><a href="tel:+142 5897555">+142 5897555</a> </li>
-				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:education-mail@support.com" class="mail"> info@example.com</a>	</li>
+				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail"> restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
-			<a href="contact.html" class="btn btn-secondary btn-theme4">Apply Now</a>
+			<a href="join.html" class="btn btn-secondary btn-theme4">Apply Now</a>
 		</div>
 	</header>
 </div>
@@ -68,12 +68,11 @@ Author URL: http://w3layouts.com
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html">FAQs</a>
+          </li>
         </ul>
-        <form action="search-results.html" class="form-inline position-relative my-2 my-lg-0">
-          <input class="form-control search" type="search" placeholder="Search here..." aria-label="Search" required="">
-          <button class="btn btn-search position-absolute" type="submit"><span class="fa fa-search" aria-hidden="true"></span></button>
-        </form>
       </div>
     </div>
   </nav>
@@ -317,7 +316,7 @@ Author URL: http://w3layouts.com
                   <ul>
                       <li><p><span class="fa fa-map-marker"></span> Estate Business, #32841 block, #221DRS Real estate business building, UK.</p></li>
                       <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-                      <li><a href="mailto:corporate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> corporate-mail@support.com</a></li>
+                      <li><a href="restem@ysjournal.com " class="mail"><span class="fa fa-envelope-open-o"></span>restem@ysjournal.com</a></li>
                   </ul>
                   <div class="main-social-footer-29">
                       <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
@@ -353,14 +352,17 @@ Author URL: http://w3layouts.com
                       <h6 class="footer-title-29">Quick Links</h6>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
-                      <li><a href="services.html">Services</a></li>
-                      <li><a href="#"> Blog</a></li>
+                      <li><a href="join.html">Join</a></li>
+                      <li><a href="activities.html">Activities</a></li>
+                      <li><a href="collaboration.html">Collaboration</a></li>
+                      <li><a href="resources.html">Resources</a></li>
                       <li><a href="contact.html">Contact</a></li>
+                      <li><a href="faq.html">FAQs</a></li>
                   </ul>
               </div>
           </div>
           <div class="d-grid grid-col-2 bottom-copies">
-              <p class="copy-footer-29">© 2020 Mastery. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
+              <p class="copy-footer-29">© 2020 reSTEM. All rights reserved</p>
                <ul class="list-btm-29">
                       <li><a href="#link">Privacy policy</a></li>
                       <li><a href="#link">Terms of service</a></li>
