--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<!--
+ <!--
 Author: W3layouts
 Author URL: http://w3layouts.com
 -->
@@ -26,7 +26,7 @@ Author URL: http://w3layouts.com
 	<header class="row top-menu-top">
 		<div class="accounts col-md-9 col-6">
 				<li class="top_li"><span class="fa fa-phone"></span><a href="tel:+142 5897555">+142 5897555</a> </li>
-				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail"> restem@ysjournal.com</a>	</li>
+				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="restem@ysjournal.com" class="mail">restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
 			<a href="join.html" class="btn btn-secondary btn-theme4">Apply Now</a>
@@ -80,8 +80,8 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>About Us</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Resources</p>
+      <h2>Activities</h2>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; FAQs</p>
     </div>
   </div>
 </section>
@@ -316,7 +316,7 @@ Author URL: http://w3layouts.com
                   <ul>
                       <li><p><span class="fa fa-map-marker"></span> Estate Business, #32841 block, #221DRS Real estate business building, UK.</p></li>
                       <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-                      <li><a href="restem@ysjournal.com" class="mail"><span class="fa fa-envelope-open-o"></span>restem@ysjournal.com</a></li>
+                      <li><a href="mailto:corporate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> corporate-mail@support.com</a></li>
                   </ul>
                   <div class="main-social-footer-29">
                       <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
