--- a/resources.html
+++ b/resources.html
@@ -80,7 +80,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>About Us</h2>
+      <h2>Resources</h2>
       <p><a href="index.html">Home</a> &nbsp; / &nbsp; Resources</p>
     </div>
   </div>
