Updated activities page and minor fixes

--- a/activities.html
+++ b/activities.html
@@ -92,15 +92,35 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">
                
                 <div class="cwp4-text col-lg-6">
-                        <h3>About Our Institution</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
-                    </p>
-                  
+                        <h3>Activities</h3>
+                    <p>Hubs have the flexibility to conduct any STEM-related activities, though the focus is expected to be on research. The following activities are directly supported by the YSJ: </p>
                     <ul class="cont-4">
-                        <li><span class="fa fa-check"></span>Materiality & Interpretation</li>
-                        <li><span class="fa fa-check"></span>Design Management and Cultural Enterprise </li>
-                        <li><span class="fa fa-check"></span>Experience Design (XD)</li>
-                        <li><span class="fa fa-check"></span>Sound Design; Social Media and SEO </li>
+                        <li><span class="fa fa-check"></span><b>Exploration module:</b> Learn about prospects in research and STEM</li>
+                        <ul>
+                          <li><u><a href="https://docs.google.com/document/d/12tqCwUj3Bh0cinQMQyVc104-8uH14OjoJkHbgCVu2wQ/edit">reSTEM Safari</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
+                          <li><u><a href="https://docs.google.com/document/d/12tqCwUj3Bh0cinQMQyVc104-8uH14OjoJkHbgCVu2wQ/edit">reSTEM Compass</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
+                        </ul>
+                        <li><span class="fa fa-check"></span><b>Foundation module:</b> Learn skills for research</li>
+                        <ul>
+                          <li><u><a href="https://docs.google.com/document/d/1Q12_YS1V_5yHmcFenX8ahidfOr7Bmg9Gs-RXut62mWE/edit">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
+                          <li>reSTEM Kaleidoscope- Talks by experienced scientists and student researchers about their experience.</li>
+                        </ul>
+                        <li><span class="fa fa-check"></span><b>Immersion module:</b> Learn by performing research</li>
+                        <ul>
+                          <li>Members will get access to an exclusive, curated database of guided science projects to learn research skills hands-on without having to conduct an original project.</li>
+                          <li>reSTEM Challenge: Certificate for completing original research project and writing research paper.</li>
+                          <li>Publish in the Young Scientists Journal.</li>
+                          <li>Mentorship to selected original research projects.</li>
+                          <li>Recognition for best projects.</li>
+                        </ul>
+                        <li><span class="fa fa-check"></span><b>Hub Journal:</b> Learn to write about research and STEM</li>
+                        <ul>
+                          <li>Produce local editions of the YSJournal for your community.</li>
+                          <li>Award and recognition for best Hub Journal.</li>
+                          <li>Training in writing and editing scientific articles and research papers.</li>
+                          <li>Publication in the Young Scientists Journal for best articles.</li>
+                          <li>May be featured in school magazines etc.</li>
+                        </ul>
                     </ul>
                 </div>
                 <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
