--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@ Author URL: http://w3layouts.com
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
       <h2>Contact Us</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Contact</p>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Contact Us</p>
     </div>
   </div>
 </section>
@@ -109,8 +109,8 @@ Author URL: http://w3layouts.com
                             
                            <div class="cont-add-rgt">
                             <h4>Email:</h4>
-                            <a href="mailto:info@example.com">
-                                <p class="contact-text-sub">info@example.com</p>
+                            <a href="mailto:restem@ysjournal.com">
+                                <p class="contact-text-sub">restem@ysjournal.com</p>
                             </a>
                         </div>
                         <div class="cont-add-lft">
