--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Better Education For A Better World</h5>
+                  <h5>Project reSTEM: reimagining STEM</h5>
                  <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="about.html">Read More</a>
                 </div>
                 
