--- a/join.html
+++ b/join.html
@@ -80,7 +80,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-service-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>Our Services</h2>
+      <h2>Join</h2>
       <p><a href="index.html">Home</a> &nbsp; / &nbsp; Join</p>
     </div>
   </div>
