Added Marquee Images for backgroundd, & Content to index

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Project reSTEM: reimagining STEM</h5>
+                  <h5>Learn and acquire skills </h5>
                  <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="about.html">Read More</a>
                 </div>
                 
@@ -103,7 +103,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Explore The World Of Our Graduates</h5>
+                  <h5> Explore and discover </h5>
                   <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
@@ -117,7 +117,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Exceptional People, Exceptional Care</h5>
+                  <h5>Innovate and Create</h5>
                  <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
@@ -131,7 +131,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Explore The World Of Our Graduates</h5>
+                  <h5>Publish your reesearch</h5>
                   <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="services.html">Read More</a>
                 </div>
               </div>
@@ -189,20 +189,20 @@ Author URL: http://w3layouts.com
 			<div class="middle-section grid-column text-center">
 				<div class="three-grids-columns">
 					<span class="fa fa-laptop"></span>
-					<h4>Learn Courses Online</h4>
-					<p>Auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet</p>
+					<h4> Skills </h4>
+					<p>Acquire data analysis, scientific, writing, and presentation skills to  conduct research and ace science fairs</p>
 					<a href="services.html" class="btn btn-secondary btn-theme3 mt-4">Read More </a>
 				</div>
 				<div class="three-grids-columns">
 					<span class="fa fa-users"></span>
-					<h4>Highly Qualified Teachers</h4>
-					<p>Auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet</p>
+					<h4>Exposure</h4>
+					<p>Discover new avenues in STEM and beyond, participate in unique opportunities and explore your interests</p>
 					<a href="services.html" class="btn btn-secondary btn-theme3 mt-4">Read More </a>
 				</div>
 				<div class="three-grids-columns">
 					<span class="fa fa-book"></span>
-					<h4>Book Library & Stores</h4>
-					<p>Auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet</p>
+					<h4>Experience</h4>
+					<p>Gain valuable research experience by completing a project and publishing research</p>
 					<a href="services.html" class="btn btn-secondary btn-theme3 mt-4">Read More </a>
 				</div>
 			</div>
