--- a/collaboration.html
+++ b/collaboration.html
@@ -8,6 +8,7 @@ Author URL: http://w3layouts.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel= "icon" href="restemlogo.png" type="image/png">
 
     <title>Project reSTEM : reimagining STEM</title>
     <!-- web fonts -->
