--- a/faq.html
+++ b/faq.html
@@ -81,7 +81,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>FAQs</h2>
+      <h2>Frequently Asked Questions</h2>
       <p><a href="index.html">Home</a> &nbsp; / &nbsp; FAQs</p>
     </div>
   </div>
@@ -93,18 +93,16 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">
                
                 <div class="cwp4-text col-lg-6">
-                        <h3>FAQs</h3>
                     <p><b>What is reSTEM?</b></p>
                     <ul class="cont-4">
-                        <li><span class="fa fa-check"></span>A global network of research-oriented high school science clubs (reSTEM Hubs)<br>
-                          Associated with the Young Scientists Journal.</li>
-                        <li><span class="fa fa-check"></span>Hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.</li>
+                        <li><span class="fa fa-check"></span>Subsidiary of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.</li>
+                        <li><span class="fa fa-check"></span>These hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.</li>
                         <li><span class="fa fa-check"></span>Hubs and Hub members compete with each other in various contests.</li>
                         <li><span class="fa fa-check"></span>reSTEM Hubs form a global community of youth STEM research.</li>
                     </ul>
                     <p><b>What makes it unique?</b></p>
                     <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>Free and open for schools across the world.</li>
+                      <li><span class="fa fa-check"></span><b>Free</b> and <b>open</b> for schools across the world.</li>
                       <li><span class="fa fa-check"></span>Focus on research.</li>
                       <li><span class="fa fa-check"></span>Emphasis on practical application of knowledge and skill-building.</li>
                       <li><span class="fa fa-check"></span>Comprehensive action and experience based learning framework.</li>
