Added ABout YSJ

--- a/about.html
+++ b/about.html
@@ -93,16 +93,10 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">
                
                 <div class="cwp4-text col-lg-6">
-                        <h3>About Our Institution</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+                        <h3>About Young Scientists Journal</h3>
+                    <p>The Young Scientists Journal is an international, youth-led peer-reviewed STEM journal for researchers aged 12-20. It endeavours to promote STEM across the world. Over the past decade, it has been the mode of choice for young researchers for getting their work published, being the oldest and largest organisation of its kind. Print issues of the journal are released twice a year, packed with original research, review articles, reports, and interviews. We also hold annual conferences, which have taken place in Cambridge and Oxford and have featured talks from high-profile academics with delegates from all over Europe. It is a non-profit organisation registered in England and Wales.
+
                     </p>
-                  
-                    <ul class="cont-4">
-                        <li><span class="fa fa-check"></span>Materiality & Interpretation</li>
-                        <li><span class="fa fa-check"></span>Design Management and Cultural Enterprise </li>
-                        <li><span class="fa fa-check"></span>Experience Design (XD)</li>
-                        <li><span class="fa fa-check"></span>Sound Design; Social Media and SEO </li>
-                    </ul>
                 </div>
                 <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
                     <img src="assets/images/g4.jpg" class="img-fluid" alt="" />
