Added sample calendar for Hub Activities

--- a/calendar.html
+++ b/calendar.html
@@ -81,8 +81,8 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>Frequently Asked Questions</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; FAQs</p>
+      <h2>Sample Calendar</h2>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; <a href="faq.html">FAQs</a> &nbsp; / &nbsp; Sample Calendar</p>
     </div>
   </div>
 </section>
@@ -93,56 +93,54 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">
                
                 <div class="cwp4-text col-lg-6">
-                    <p><b>What is reSTEM?</b></p>
+                    <p><b>SAMPLE HUB ACTIVITIES (IN CLASS) CALENDAR</b></p>
                     <ul class="cont-4">
-                        <li><span class="fa fa-check"></span>Subsidiary of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.</li>
-                        <li><span class="fa fa-check"></span>These hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.</li>
-                        <li><span class="fa fa-check"></span>Hubs and Hub members compete with each other in various contests.</li>
-                        <li><span class="fa fa-check"></span>reSTEM Hubs form a global community of youth STEM research.</li>
+                        <li><span class="fa fa-check"></span><b>Recommended:</b> One-hour session every week / Two 30 minute sessions a week</li>
                     </ul>
-                    <p><b>What makes it unique?</b></p>
+                    <p>Week 1: Orientation + Research 101 <br>
+                      Week 2: Research 101 + Safari <br>
+                      Week 3: Research 101 + Kaleidoscope <br>
+                      Week 4: Research 101 + Masterclass <br>
+                    </p>
+                    <p>Week 5: Research 101 + Safari<br>
+                      Week 6: Research 101 + Kaleidoscope<br>
+                      Week 7: Research 101 + Research project orientation<br>
+                      Week 8: Research 101 + Compass<br>
+                    </p>
+                    <p>Week 9:  Research 101 + Safari<br>
+                      Week 10: Research 101 + Kaleidoscope<br>
+                      Week 11:  Research 101 + Compass<br>
+                      Week 12:   Research 101 + Masterclass
+                    </p>
+                    <p>
+                      Week 13:  Research 101 + Safari<br>
+                      Week 14: Research 101 + Kaleidoscope<br>
+                      Week 15: Compass + Masterclass<br>
+                      Week 16:  Hub journal session<br>
+                    </p>
+                    <p>
+                      Week 17:  Safari + Compass<br>
+                      Week 18:  Hub journal session<br>
+                      Week 19:  Research project discussion<br>
+                      Week 20: STEM Debates<br>
+                    </p>
+                    <p>
+                      Week 21:  Safari + Compass<br>
+                      Week 22: Hub exhibition preparation<br>
+                      Week 23:  Hub exhibition<br>
+                      Week 24:  Finale (prize distribution, Hub Journal presentation etc.)<br>
+                    </p>
+                    <p><b>Note: Contests and research projects will be conducted separately, not in weekly Hub sessions.</b></p>
+
                     <ul class="cont-4">
-                      <li><span class="fa fa-check"></span><b>Free</b> and <b>open</b> for schools across the world.</li>
-                      <li><span class="fa fa-check"></span>Focus on research.</li>
-                      <li><span class="fa fa-check"></span>Emphasis on practical application of knowledge and skill-building.</li>
-                      <li><span class="fa fa-check"></span>Comprehensive action and experience based learning framework.</li>
+                      <li><span class="fa fa-check"></span>Research 101: Workshops on research skills.</li>
+                      <li><span class="fa fa-check"></span>Safari: Seminars on STEM fields.</li>
+                      <li><span class="fa fa-check"></span>Compass: Seminars on opportunities in STEM.</li>
+                      <li><span class="fa fa-check"></span>Kaleidoscope: Videos by young researchers about their research.</li>
+                      <li><span class="fa fa-check"></span>Masterclass: Interviews and addresses by senior scientists.</li>
+                      <li><span class="fa fa-check"></span>Hub Journal: Local YSJ edition published by reSTEM Hub.</li>
+                      <li><span class="fa fa-check"></span>Hub exhibition: Exhibition of the research and projects undertaken by students.</li>
                     </ul>
-                    <p><b>What is a reSTEM Hub?</b></p>
-                    <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>A high school science club (or group of science clubs within a school) associated with YSJ reSTEM focusing on research-related activities.</li>
-                      <li><span class="fa fa-check"></span>May be either student-led or school-run.</li>
-                    </ul>
-                    <p><b>How do hub members benefit?</b></p>
-                    <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>Learn skills and exposure for research and competing at science fairs.</li>
-                      <li><span class="fa fa-check"></span>Publish your research.</li>
-                      <li><span class="fa fa-check"></span>Receive mentorship for research projects.</li>
-                      <li><span class="fa fa-check"></span>Attend and present at conferences of the Young Scientists Journal.</li>
-                    </ul>
-                    <p><b>How does a club benefit from membership of reSTEM and which ones are eligible?</b></p>
-                    <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>Access to unique activities (elaborated below) to promote STEM, especially research.</li>
-                      <li><span class="fa fa-check"></span>Promotional material and other support to increase enrolment.</li>
-                      <li><span class="fa fa-check"></span>For membership of the network, a club must be: STEM-oriented, authorized to operate by the institution and free and open for all students of the institution.</li>
-                    </ul>
-                    <p><b>How to join?</b></p>
-                    <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>Sign up using the online form.</li>
-                      <li><span class="fa fa-check"></span>If approved, a link will be sent to register on a partner platform through which content will be provided for activities and workshops.</li>
-                      <li><span class="fa fa-check"></span>Register Hub members to give them access to quizzes and other content.</li>
-                    </ul>
-                    <p><b>When will activities be conducted?</b></p>
-                    <ul class="cont-4">
-                      <li><span class="fa fa-check"></span>Hub Activities can be conducted in weekly or biweekly sessions (total one hour a week) before, within or after school hours.</li>
-                      <li><span class="fa fa-check"></span>A <a href="calendar.html" target="_blank"><u>sample calendar</u></a> is available but Hubs can modify it according to requirements.</li>
-                      <li><span class="fa fa-check"></span>Content for workshops etc. is specially designed to be convenient for both in-person and virtual modes and are compatible with Zoom, Google Meet and other platforms.</li>
-                    </ul>
-                    <!--<ul>A global network of research-oriented high school science clubs (reSTEM Hubs)<br>
-Associated with the Young Scientists Journal.<br>
-Hubs are provided with support for conducting activities like skill workshops, guidance seminars etc. <br>
-Hubs and Hub members compete with each other in various contests. <br>
-reSTEM Hubs form a global community of youth STEM research. <br>
-                    -->
                 </div>
                 <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
                     <img src="assets/images/g4.jpg" class="img-fluid" alt="" />
