Added restem safari page

--- a/activities.html
+++ b/activities.html
@@ -98,12 +98,12 @@ Author URL: http://w3layouts.com
                     <ul class="cont-4">
                         <li><span class="fa fa-check"></span><b>Exploration module:</b> Learn about prospects in research and STEM</li>
                         <ul>
-                          <li><u><a href="https://docs.google.com/document/d/12tqCwUj3Bh0cinQMQyVc104-8uH14OjoJkHbgCVu2wQ/edit">reSTEM Safari</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
-                          <li><u><a href="https://docs.google.com/document/d/12tqCwUj3Bh0cinQMQyVc104-8uH14OjoJkHbgCVu2wQ/edit">reSTEM Compass</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
+                          <li><u><a href="restem_safari.html" target="_blank">reSTEM Safari</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
+                          <li><u><a href="https://docs.google.com/document/d/12tqCwUj3Bh0cinQMQyVc104-8uH14OjoJkHbgCVu2wQ/edit" target="_blank">reSTEM Compass</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
                         </ul>
                         <li><span class="fa fa-check"></span><b>Foundation module:</b> Learn skills for research</li>
                         <ul>
-                          <li><u><a href="https://docs.google.com/document/d/1Q12_YS1V_5yHmcFenX8ahidfOr7Bmg9Gs-RXut62mWE/edit">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
+                          <li><u><a href="https://docs.google.com/document/d/1Q12_YS1V_5yHmcFenX8ahidfOr7Bmg9Gs-RXut62mWE/edit" target="_blank">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
                           <li>reSTEM Kaleidoscope- Talks by experienced scientists and student researchers about their experience.</li>
                         </ul>
                         <li><span class="fa fa-check"></span><b>Immersion module:</b> Learn by performing research</li>
