--- a/restem_safari.html
+++ b/restem_safari.html
@@ -30,7 +30,7 @@ Author URL: http://w3layouts.com
 				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="restem@ysjournal.com" class="mail">restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
-			<a href="join.html" class="btn btn-secondary btn-theme4">Apply Now</a>
+			<a href="join.html" class="btn btn-secondary btn-theme4">Join</a>
 		</div>
 	</header>
 </div>
@@ -50,28 +50,33 @@ Author URL: http://w3layouts.com
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="join.html">Join</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="mission.html">The Mission</a>
+              <a class="dropdown-item" href="ysj.html">Young Scientists Journal</a>
+              <a class="dropdown-item" href="theteam.html">The Team</a>
+              <a class="dropdown-item" href="faq.html">FAQs</a>
+             </div>
           </li>
           <li>
             <a class="nav-link" href="activities.html">Activities</a>
           </li>
-          <li>
-            <a class="nav-link" href="collaboration.html">Collaboration</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Partner
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="collaboration.html">Collaborations</a>
+              <a class="dropdown-item" href="sponsors.html">Sponsors</a>
+             </div>
           </li>
           <li> <a class = "nav-link" href="resources.html">Resources</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="faq.html">FAQs</a>
           </li>
         </ul>
       </div>
