--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ Author URL: http://w3layouts.com
 		<div class="container">
 	<header class="row top-menu-top">
 		<div class="accounts col-md-9 col-6">
-				<li class="top_li"><span class="fa fa-phone"></span><a href="tel:+142 5897555">+142 5897555</a> </li>
 				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="restem@ysjournal.com" class="mail">restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
@@ -40,7 +39,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-bootstrap-header">
   <nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
     <div class="container">
-    <a class="navbar-brand" href="#index.html">
+    <a class="navbar-brand" href="index.html">
         <img src="restem.png" alt="reSTEM" title="reSTEM" style="height:35px;" />
     </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -80,6 +79,9 @@ Author URL: http://w3layouts.com
           </li>
         </ul>
       </div>
+      <a class="navbar-brand" href="https://www.ysjournal.com" target="_blank">
+        <img src="ysj.png" alt="Young Scientists Journal" title="YSJ" style="height:50px;" />
+        </a>
     </div>
   </nav>
 </section>
