--- a/mission.html
+++ b/mission.html
@@ -26,7 +26,6 @@ Author URL: http://w3layouts.com
 		<div class="container">
 	<header class="row top-menu-top">
 		<div class="accounts col-md-9 col-6">
-				<li class="top_li"><span class="fa fa-phone"></span><a href="tel:+142 5897555">+142 5897555</a> </li>
 				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail"> restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
@@ -80,6 +79,9 @@ Author URL: http://w3layouts.com
           </li>
         </ul>
       </div>
+      <a class="navbar-brand" href="https://www.ysjournal.com" target="_blank">
+        <img src="ysj.png" alt="Young Scientists Journal" title="YSJ" style="height:50px;" />
+        </a>
     </div>
   </nav>
 </section>
