fixed content color, gradient consistency

--- a/join.html
+++ b/join.html
@@ -85,7 +85,7 @@ Author URL: http://w3layouts.com
     </div>
   </nav>
 </section>
-<section class="w3l-service-breadcrum">
+<section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
       <h2>Join</h2>
